--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,12 @@
   font-style: italic;
 }
 
+@font-face {
+  font-family: "Roboto";
+  src: url("../fonts/Roboto-Regular.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+}
 
 
 html {
@@ -45,7 +51,7 @@ body {
   padding: 0;
   width: 1500px;
 
-  font-family: "Roboto Condensed", sans-serif;
+  font-family: "Roboto Condensed", "Arial", sans-serif;
   font-size: 12px;
   line-height: 12px;
   font-weight: 400;
@@ -65,22 +71,25 @@ img {
   height: auto;
 }
 
-.visually-hidden:not(:focus):not(:active) {
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
   position: absolute;
+
   width: 1px;
   height: 1px;
   margin: -1px;
   border: 0;
   padding: 0;
+
   white-space: nowrap;
-  -webkit-clip-path: inset(100%);
+
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
 
 /*временно*/
-
 h2,
 h3,
 p {
@@ -90,13 +99,96 @@ p {
 /*временно*/
 
 
+
+/*--------------------------
+------  БЭМ-блоки ----------
+--------------------------*/
+
+.studio-label {
+  width: 162px;
+
+  font-size: 18px;
+  line-height: 18px;
+
+  outline: 1px solid red
+}
+
+.studio-label .logo {
+  display: block;
+}
+
+.studio-label .description {
+  margin: 0;
+  margin-bottom: 60px;
+  width: 100px;
+}
+
+.socials-list {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  margin: 0;
+  padding: 0;
+  width: 162px;
+
+  font-size: 0;
+  list-style: none;
+}
+
+.socials-link {}
+
+.socials-link + .socials-link {
+  margin-left: 15px;
+}
+
+.socials-link--facebook {
+  width: 10px;
+  height: 22px;
+
+  background-image: url("../img/icons/facebook.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.socials-link--twitter {
+  width: 26px;
+  height: 21px;
+
+  background-image: url("../img/icons/twitter.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.socials-link--linkedin {
+  width: 24px;
+  height: 23px;
+
+  background-image: url("../img/icons/linkedin.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.socials-link--google {
+  width: 19px;
+  height: 19px;
+
+  background-image: url("../img/icons/google.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+/************************************/
+
+
+
 .main-header {
+
   display: flex;
 
   min-height: 500px;
 }
 
-.main-header .main-header-left {
+.main-header-left {
   padding-top: 50px;
   padding-left: 168px;
   width: 1035px;
@@ -108,7 +200,25 @@ p {
   background-repeat: no-repeat;
 }
 
-.main-header .main-header-right {
+.main-header .studio-label {
+  outline: 1px solid red
+}
+
+.main-header .adress {
+  margin: 0;
+  margin-bottom: 45px;
+}
+
+.main-header .contacts {
+  margin: 0;
+  padding-left: 75px;
+}
+
+.main-header-right {
+  position: relative;
+
+  padding-top: 260px;
+  padding-left: 60px;
   width: 465px;
 
   font-size: 13px;
@@ -118,25 +228,184 @@ p {
   background-color: #7acec3;
 }
 
-.main-navigation-list {
+.main-header-right::before {
+  content: "";
+  position: absolute;
+
+  bottom: 0;
+  left: 0;
+
+  width: 1px;
+  height: 682px;
+
+  background-color: #ffffff;
+
+  transform: rotate(42.8deg);
+  transform-origin: bottom;
+}
+
+
+
+/* closed ~start */
+/*
+
+.main-navigation {
+  position: absolute;
+
+  top: 50px;
+  right: 170px;
+
+  width: 120px;
+  height: 120px;
+
+  border: 3px solid #ffffff;
+}
+
+
+.main-navigation .list {
+  display: none;
+
+  margin: 0;
+  padding: 0;
+
   list-style: none;
 }
 
-.studio-label {
-  width: 162px;
 
-  font-size: 18px;
-  line-height: 18px;
+.main-navigation .close-button {
+  content: "";
+  position: absolute;
+
+  top: 50%;
+  left: 50%;
+
+  margin-top: -9px;
+  margin-left: -20px;
+  padding: 0;
+  border: 0;
+
+  width: 40px;
+  height: 18px;
+
+  background-color: transparent;
+
+  cursor: pointer;
 }
 
-.main-header .studio-label {
+.close-button::before,
+.close-button::after {
+  content: "";
+  position: absolute;
 
-  outline: 1px solid red
+  top: 50%;
+  left: 50%;
+
+  width: 40px;
+  height: 3px;
+
+  background-color: #ffffff;
 }
 
-.socials-list {
+.close-button::before {
+  margin-top: -9px;
+  margin-left: -20px;
+
+  box-shadow: 0 7px 0 0 #ffffff
+}
+
+.close-button::after {
+  margin-top: 5px;
+  margin-left: -20px;
+}
+*/
+
+/* closed ~end */
+
+
+
+/* opened ~start */
+
+.main-navigation {
+  position: absolute;
+
+  top: 50px;
+  right: 170px;
+
+  min-width: 725px;
+  height: 120px;
+
+  font-family: "Roboto", "Arial", sans-serif;
+  font-size: 14px;
+  line-height: 25px;
+  text-transform: uppercase;
+
+  background-color: #f8c255;
+}
+
+.main-navigation .list {
+  display: flex;
+  margin: 0;
+  padding: 50px;
+  padding-bottom: 45px;
+
   list-style: none;
 }
+
+.main-navigation .item {
+  margin-right: 65px;
+}
+
+.main-navigation .close-button {
+  content: "";
+  position: absolute;
+
+  top: 50%;
+  right: 50px;
+
+  margin-top: -9px;
+  padding: 0;
+  border: 0;
+
+  width: 40px;
+  height: 18px;
+
+  background-color: transparent;
+
+  cursor: pointer;
+}
+
+.close-button::before,
+.close-button::after {
+  content: "";
+  position: absolute;
+
+  width: 40px;
+  height: 3px;
+
+  background-color: #ffffff;
+}
+
+.close-button::before {
+  top: 50%;
+  left: 50%;
+
+  margin-top: -2px;
+  margin-left: -20px;
+
+  transform: rotate(50deg);
+}
+
+.close-button::after {
+  top: 50%;
+  left: 50%;
+
+  margin-top: -2px;
+  margin-left: -20px;
+
+  transform: rotate(-50deg);
+}
+
+/* opened ~end */
 
 
 
