--- a/css/style.css
+++ b/css/style.css
@@ -89,15 +89,6 @@ input[type="radio"].visually-hidden {
   overflow: hidden;
 }
 
-/*временно*/
-h2,
-h3,
-p {
-  margin-top: 0;
-}
-
-/*временно*/
-
 
 
 /*--------------------------
@@ -135,10 +126,12 @@ p {
   list-style: none;
 }
 
-.socials-link {}
-
-.socials-link + .socials-link {
+.socials-item + .socials-item {
   margin-left: 15px;
+}
+
+.socials-link {
+  display: block;
 }
 
 .socials-link--facebook {
@@ -546,42 +539,71 @@ p {
 .studio {
   display: flex;
   flex-wrap: wrap;
+
   background-color: #e9eae2;
 }
 
 .studio-header {
+  position: relative;
+
+  padding-top: 295px;
+  padding-left: 215px;
   width: 465px;
   height: 500px;
 
   background-color: #ff9b6d;
 }
 
+.studio-header::before {
+  content: "";
+  position: absolute;
+
+  bottom: 0;
+  left: 0;
+
+  width: 1px;
+  height: 682px;
+
+  background-color: #ffffff;
+
+  transform: rotate(42.8deg);
+  transform-origin: bottom;
+}
+
 .studio-title {
+  margin: 0;
 
   font-size: 48px;
   line-height: 48px;
   font-weight: 400;
 
   color: #fefefe;
-
 }
 
 .studio-layout {
+  position: relative;
+
   display: flex;
-
-  width: 1035px;
-  min-height: 500px;
-
   padding-top: 95px;
   padding-left: 115px;
   padding-right: 170px;
+  width: 1035px;
+  min-height: 500px;
 }
 
+.studio-image {
+  position: absolute;
 
+  top: 95px;
+  left: 505px;
+
+  width: 360px;
+  height: 200px;
+}
 
 .studio .about {
-  padding-right: 40px;
-  width: 390px;
+  margin-right: 40px;
+  width: 350px;
 
   font-size: 18px;
   line-height: 18px;
@@ -592,7 +614,13 @@ p {
 }
 
 .studio .about-lead {
+  margin-top: 0;
+
   font-style: italic;
+}
+
+.studio .about-lead + .about-lead {
+  margin-bottom: 32px;
 }
 
 .studio .awards {
@@ -600,19 +628,25 @@ p {
   flex-wrap: wrap;
   justify-content: space-between;
   align-content: flex-start;
-  padding-top: 245px;
+  padding-top: 240px;
   width: 360px;
 }
 
 .awards .awards-title {
+  margin: 0;
+  margin-bottom: 20px;
   width: 360px;
 
   font-size: 14px;
-  line-height: 18px;
+  line-height: 19px;
   font-weight: 700;
+
+  border-bottom: 1px solid #bfc0b9;
 }
 
 .awards .awards-text {
+  margin: 0;
+
   width: 150px;
   font-size: 12px;
   line-height: 14px;
@@ -621,45 +655,100 @@ p {
 
 
 
-.staff {
+.staff-layout {
+  display: flex;
+  padding-top: 60px;
+  padding-bottom: 100px;
+
   font-size: 14px;
   line-height: 18px;
 }
 
-.staff-layout {
-  display: flex;
-}
-
 .staff-about {
+
+  padding-left: 165px;
+  padding-right: 30px;
   width: 465px;
-  ;
+
+  /*
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  -ms-hyphens: auto;
+*/
+  hyphens: auto;
 }
 
-.staff-title {}
+.staff-title {
+  margin: 0;
+  margin-bottom: 20px;
 
-.staff-text {}
+  font-size: 14px;
+  line-height: 14px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.staff-text {
+  margin: 0;
+  margin-bottom: 20px;
+
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 300;
+  text-transform: none;
+}
+
+.staff-text:last-child {
+  margin-bottom: 0;
+}
 
 .staff-person {
-  padding-right: 30px;
-  width: 273px;
+  margin-right: 30px;
+  width: 270px;
 }
 
-.staff-person .person-image {}
+.staff-person:last-child {
+  margin-right: 0px;
+}
 
-.staff-person .person-information {}
 
-.staff-person .person-name {
+
+.person-image {
+  display: block;
+  margin-bottom: 17px;
+}
+
+.person-information {
+  margin: 0;
+}
+
+.person-name {
+  display: block;
+
   font-size: 13px;
   line-height: 16px;
   font-weight: 700;
 }
 
-.staff-person .person-profession {
+.person-profession {
+  display: block;
+  margin-top: -5px;
+  margin-bottom: 20px;
+
   font-size: 12px;
   line-height: 16px;
 }
 
+.person-links {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
 .person-cv {
+  position: relative;
+  margin-top: -2px;
+
   font-size: 14px;
   line-height: 16px;
   color: #fd5000;
@@ -667,8 +756,50 @@ p {
   text-decoration: none;
 }
 
-.socials {
-  list-style: none;
+.person-cv::after {
+  content: "";
+  position: absolute;
+
+  right: -27px;
+
+  width: 20px;
+  height: 15px;
+
+  background-image: url("../img/icons/arrow-left.svg");
+  background-repeat: no-repeat;
+}
+
+.person-links .socials-list {
+  justify-content: flex-end;
+  align-items: flex-start;
+}
+
+.person-links .socials-link--facebook {
+  width: 7px;
+  height: 13px;
+
+  background-image: url("../img/icons/facebook-orange.svg");
+}
+
+.person-links .socials-link--twitter {
+  width: 13px;
+  height: 10px;
+
+  background-image: url("../img/icons/twitter-orange.svg");
+}
+
+.person-links .socials-link--linkedin {
+  width: 12px;
+  height: 12px;
+
+  background-image: url("../img/icons/linkedin-orange.svg");
+}
+
+.person-links .socials-link--google {
+  width: 18px;
+  height: 12px;
+
+  background-image: url("../img/icons/google-orange.svg");
 }
 
 
