--- a/css/style.css
+++ b/css/style.css
@@ -809,18 +809,39 @@ input[type="radio"].visually-hidden {
 }
 
 .news-header {
+  position: relative;
+
+  padding-top: 295px;
+  padding-left: 215px;
   width: 465px;
   min-height: 500px;
+
   background-color: #d4edbf;
 }
 
+.news-header::before {
+  content: "";
+  position: absolute;
+
+  bottom: 0;
+  left: 0;
+
+  width: 1px;
+  height: 682px;
+
+  background-color: #ffffff;
+
+  transform: rotate(42.8deg);
+  transform-origin: bottom;
+}
+
 .news-title {
+  margin: 0;
+
   font-size: 48px;
   line-height: 48px;
   font-weight: 400;
-
   color: #fefefe;
-
 }
 
 .news-content {
@@ -834,8 +855,13 @@ input[type="radio"].visually-hidden {
   width: 370px;
 }
 
+.news .article:last-child {
+  margin-right: 0;
+}
+
 .news .article-header {
-  margin-top: 0;
+  margin: 0;
+  min-height: 52px;
 
   font-size: 24px;
   line-height: 24px;
@@ -843,36 +869,57 @@ input[type="radio"].visually-hidden {
 }
 
 .news .article-date {
+  display: block;
+  margin-bottom: 18px;
+
   font-size: 12px;
-  line-height: 24px;
+  line-height: 14px;
   color: #6a6969;
 }
 
-.news .article-image {}
+.news .article-image {
+  display: block;
+  margin-bottom: 20px;
+}
 
 .news .article-lead {
+  margin: 0;
+  margin-bottom: 8px;
+
   font-size: 12px;
   line-height: 14px;
   text-transform: none;
+  text-align: justify;
   color: #6a6969;
 }
 
 .news .article-more {
+  display: block;
+
+  text-align: right;
   color: #fd5000;
+
   text-decoration: none;
 }
+
+
 
 .main-footer {
   display: flex;
 }
 
-.main-footer .map {}
+.main-footer .map {
+  width: 750px;
+  height: 650px;
+}
 
 .main-footer-right {
   display: flex;
   flex-wrap: wrap;
-  padding-left: 115px;
+  align-content: space-between;
   padding-top: 150px;
+  padding-left: 115px;
+  padding-bottom: 55px;
 }
 
 .main-footer .information {
