--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,10 @@ body {
   background-color: #e9eae2;
 }
 
+body.single-page {
+  background-color: #fff;
+}
+
 a {
   color: #ffffff;
   text-decoration: none;
@@ -278,8 +282,8 @@ input[type="radio"].visually-hidden {
   cursor: pointer;
 }
 
-.close-button::before,
-.close-button::after {
+.main-navigation .close-button::before,
+.main-navigation .close-button::after {
   content: "";
   position: absolute;
 
@@ -292,14 +296,14 @@ input[type="radio"].visually-hidden {
   background-color: #ffffff;
 }
 
-.close-button::before {
+.main-navigation .close-button::before {
   margin-top: -9px;
   margin-left: -20px;
 
   box-shadow: 0 7px 0 0 #ffffff
 }
 
-.close-button::after {
+.main-navigation .close-button::after {
   margin-top: 5px;
   margin-left: -20px;
 }
@@ -360,8 +364,8 @@ input[type="radio"].visually-hidden {
   cursor: pointer;
 }
 
-.close-button::before,
-.close-button::after {
+.main-navigation .close-button::before,
+.main-navigation .close-button::after {
   content: "";
   position: absolute;
 
@@ -371,7 +375,7 @@ input[type="radio"].visually-hidden {
   background-color: #ffffff;
 }
 
-.close-button::before {
+.main-navigation .close-button::before {
   top: 50%;
   left: 50%;
 
@@ -381,7 +385,7 @@ input[type="radio"].visually-hidden {
   transform: rotate(50deg);
 }
 
-.close-button::after {
+.main-navigation .close-button::after {
   top: 50%;
   left: 50%;
 
@@ -396,6 +400,8 @@ input[type="radio"].visually-hidden {
 
 
 .projects {
+  position: relative;
+
   display: flex;
 }
 
@@ -594,6 +600,170 @@ input[type="radio"].visually-hidden {
 .project--fondue .like {
   margin-left: 60px;
 }
+
+
+
+.project--single {
+  position: absolute;
+
+  padding: 0;
+  padding-top: 455px;
+  padding-left: 265px;
+
+  width: 1500px;
+  height: 1265px;
+
+  background-size: auto;
+  background-position: 750px 50%;
+}
+
+.project--single .project-container {
+  width: 570px;
+}
+
+.project--single .project-name {
+  margin-bottom: 8px;
+
+  font-size: 30px;
+  line-height: 30px;
+}
+
+.project--single .project-information {
+  margin-bottom: 45px;
+
+  font-size: 14px;
+  line-height: 14px;
+}
+
+.project--single .project-description {
+  font-size: 14px;
+  line-height: 14px;
+  text-transform: none;
+}
+
+.project--single .project-description:last-of-type {
+  margin-bottom: 55px;
+}
+
+.project--single .slider {
+  display: flex;
+  justify-content: space-around;
+  margin: 0 auto;
+  margin-bottom: 85px;
+  width: 370px;
+}
+
+.slider .button {
+  padding: 0;
+  width: 26px;
+
+  border: 0;
+  background-color: transparent;
+  background-image: url("../img/icons/slider-right.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+
+  cursor: pointer;
+}
+
+.slider .button-left {
+  transform: scaleX(-1);
+}
+
+.slider .button-left:active {
+  transform: scaleX(-1) translateX(2px);
+}
+
+.slider .button-right:active {
+  transform: translateX(2px);
+}
+
+.slider .image {
+  width: 100px;
+  height: 100px;
+
+  outline: 1px solid #d4d5cd;
+  outline-offset: -1px;
+}
+
+.slider .image-1 {
+  background-image: url("../img/slider-image-1.jpg");
+  background-repeat: no-repeat;
+}
+
+.slider .image-2 {
+  background-image: url("../img/project-fondue.jpg");
+  background-repeat: no-repeat;
+  background-position: -20px -60px;
+  background-size: 160px;
+}
+
+.project--single .socials-list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
+  width: 162px;
+}
+
+.project--single .socials-item {
+  margin: 0;
+}
+
+.project--single .socials-link {
+  background-image: none;
+}
+
+.project--single .socials-link path {
+  fill: #333333;
+}
+
+.project--single .socials-link--facebook {}
+
+.project--single .socials-link--twitter {}
+
+.project--single .socials-link--google {}
+
+.project--single .socials-link--gmail {
+  width: 26px;
+  height: 20px;
+}
+
+.project--single .close-button {
+  position: absolute;
+
+  top: 78px;
+  right: 195px;
+
+  padding: 0;
+  width: 100px;
+  height: 100px;
+
+  border: 1px solid #131313;
+  background-color: #fff;
+}
+
+.project--single .close-button::before,
+.project--single .close-button::after {
+  content: "";
+  position: absolute;
+
+  width: 25px;
+  height: 1px;
+
+  background-color: #131313;
+
+  cursor: pointer;
+}
+
+.project--single .close-button::before {
+  transform: translate(-50%, -50%) rotate(45deg);
+}
+
+.project--single .close-button::after {
+  transform: translate(-50%, -50%) rotate(-45deg);
+}
+
 
 
 .project--louis {
