--- a/css/style.css
+++ b/css/style.css
@@ -687,7 +687,7 @@ input[type="radio"].visually-hidden {
 }
 
 .slider .image-1 {
-  background-image: url("../img/slider-image-1.jpg");
+  background-image: url("../img/slider-1.jpg");
   background-repeat: no-repeat;
 }
 
